--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <a class="btn btn-dark m-3" href="#!"><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-dark m-3" href="#!"><i class="fab fa-facebook-f"></i></a>
                 <a class="btn btn-dark m-3" href="#!"><i class="fab fa-instagram"></i></a>
+                <a href="./practice/01_markup.html">01_markup</a>
             </div>
         </div>
         <!-- Bootstrap core JS-->
